k8s/06-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ai-task-platform
  labels:
    app: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      containers:
        - name: worker
          image: abhi/ai-task-worker:v1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
